--- a/public/views/nav.html
+++ b/public/views/nav.html
@@ -8,5 +8,14 @@
         <a href="/loanee/new"> New Loanee </a>
       </li>
     </ul>
+
+    <ul class="nav navbar-nav navbar-right">
+     <li ng-class='{active: PAGE === "settings"}'>
+        <a href="/settings"> Settings </a>
+      </li>
+      <li>
+        <a href="/logout" target="_self"> Log Out </a>
+      </li>
+    </ul>
   </div>
 </nav>
